--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,84 @@
-.grid-container {
+/* goal is to make this webpage fixed */
+
+body{
+  width: 90%;
+  height: auto;
+  background-color: rgb(218, 218, 218);
+}
+
+header{
+  border: black 1px solid;
+  height: 80px;
+  margin-top: 10px;
+  background-color: white;
+}
+
+h2.vote-title{
+  text-align: center;
+}
+
+#img-container{
+  border: red 1px solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: white;
+}
+
+.image{
+  width: 200px;
+  height: 200px;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+div.results{
+  border: red 1px solid;
+  height: auto;
+  text-align: center;
+}
+
+#show-results-btn{
+  text-align: center;
+  border: black 1px solid;
+  display: inline-block;
+  padding: 20px;
+  margin: 0% 40%;
+}
+
+#results-list{
+  -webkit-column-count: 2;
+  list-style-type: none;
+}
+
+#myChart{
+  border: black 1px solid;
+}
+
+/* .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: minmax(200px, auto);
-  /* grid-template-areas: 
+  grid-template-areas: 
   "header header header content"
   "sidebar image image content"
   "sidebar content content content"
   "sidebar content content content"
-  "footer footer footer footer"; */
-  /* gap: 30px; */
+  "footer footer footer footer";
+  gap: 30px;
 }
 
-.grid-item-1{
+.grid-item-1{ */
   /* header */
-  grid-column: 1/-1;
-  /* grid-row: 1/2; */
-  /* grid-area: header; */
+  /* grid-column: 1/-1;
+  grid-row: 1/2;
+  grid-area: header;
   border: 1px black solid;
 }
 
-.grid-item-2{
+.grid-item-2{ */
   /* sidebar */
-  grid-row: 2/6;
+  /* grid-row: 2/6;
   border: 1px black solid;
   display: flex;
   flex-direction: row;
@@ -29,24 +86,28 @@
 }
 
 .grid-item-3{
-  /* images */
+  images
   grid-column: 2/-1;
   grid-row: 2/4;
   border: 1px black solid;
-}
+} */
 
-.image{
+/* .image{
   width: 33%;
 }
 
 .grid-item-4{
-  /* content */
+  content
   grid-column: 2/-1;
   grid-row: 4/6;
   border: 1px black solid;
-}
+} */
 
-.grid-item-5{
+/* .grid-item-5{
   grid-column: 1/-1;
   border: 1px black solid;
 }
+
+.grid-item-6{
+  grid-column: 1/-1;
+} */
