--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,126 @@ body{
   background-color: rgb(218, 218, 218);
 }
 
+/* nav bar */
+
 header{
-  border: black 1px solid;
-  height: 80px;
+  /* border: black 1px solid; */
+  height: 40px;
   margin-top: 10px;
   background-color: white;
+  width: 100%;
+  border-radius: 5px 5px 0px 0px;
 }
 
-h2.vote-title{
-  text-align: center;
+navbar{
+  /* border: blue 1px solid; */
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  margin: 0px 50px;
+}
+
+.nav-logo{
+  /* border: blue 1px solid; */
+  display: flex;
+  margin-top: 5px;
+}
+section.nav-logo p{
+  /* border: red 1px solid; */
+  margin: auto;
+  height: 40px;
+  color: #01a2c8;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+}
+.bus-logo{
+  width: 30px;
+  height: 30px;
+}
+
+navbar ul{
+  /* border: blue 1px solid; */
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  height: 30px;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
+}
+
+navbar li{
+  margin: 0px 10px;
+  margin-top: auto;
+  color: #222;
+}
+
+navbar li:hover{
+  color:#fecf62;
+}
+
+/* section.log-in{
+  border: blue 1px solid;
+  float: right;
+  justify-content: flex-end;
+} */
+
+.vote-container{
+  border: #01a2c8 1px solid;
+  background-color: #01a2c8;
+}
+
+div.title{
+  /* border: black 1px solid; */
+  text-align: left;
+  margin-top: 50px;
+  height: 250px;
+  margin-left: 50px;
+  margin-right: 50px;
+  display: flex;
+}
+div.title p{
+  /* border: black 1px solid; */
+  font-size: 2rem;
+  width: 50%;
+  margin-top: 50px;
+  color: #1f1645;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+}
+
+b {
+  color: #fed881;
+}
+
+div.title img{
+  width: 250px;
+  height: 250px;
+  margin: auto;
+  filter:invert(85%);
+}
+
+.aura{
+  /* border: black 1px solid; */
+  box-shadow: 1px -165px 276px 93px rgba(253, 253, 253, 0.75);
+}
+
+div.vote-prompt{
+  /* border: black 1px solid; */
+  font-size: 1.5rem;
+  width: 50%;
+  margin-left: 50px;
+  margin-top: 30px;
+  color: #1f1645;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 #img-container{
-  border: red 1px solid;
+  /* border: red 1px solid; */
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background-color: white;
+  background-color: #01a2c8;
+  margin-top: 30px;
 }
 
 .image{
@@ -31,10 +134,12 @@ h2.vote-title{
   height: 200px;
   margin-right: 5px;
   margin-left: 5px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 25px 0px #1f1645;
 }
 
 div.results{
-  border: red 1px solid;
+  /* border: red 1px solid; */
   height: auto;
   text-align: center;
 }
@@ -43,8 +148,20 @@ div.results{
   text-align: center;
   border: black 1px solid;
   display: inline-block;
-  padding: 20px;
-  margin: 0% 40%;
+  padding: 20px 40px;
+  margin-top: 30px;
+  background-color: #1f1645;
+  color: white;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px 0px #1f1645;
+  transition: 1s;
+}
+
+#show-results-btn:hover{
+  background-color: #fed881;
+  color: #1f1645;
 }
 
 #results-list{
@@ -53,9 +170,49 @@ div.results{
 }
 
 #myChart{
-  border: black 1px solid;
+  /* border: black 1px solid; */
+  width: 100%;
+  height: 0;
+  background-color: #01a2c8;
 }
 
+footer{
+  /* border: black 1px solid; */
+  height: 40px;
+  margin-bottom: 10px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  border-radius: 0px 0px 5px 5px;
+}
+
+footer ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
+  justify-content: space-evenly;
+}
+
+footer li{
+  margin: auto;
+  padding: 10px;
+  color: #222;
+  font-size: 0.75rem;
+  font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
+}
+
+footer li:hover{
+  color:#fecf62;
+}
+
+footer img{
+  width: 30px;
+  height: 30px;
+  margin-left: auto;
+  margin-top: 5px;
+}
 /* .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
