--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ div.results{
 
 #show-results-btn{
   text-align: center;
-  border: black 1px solid;
+  /* border: black 1px solid; */
   display: inline-block;
   padding: 20px 40px;
   margin-top: 30px;
@@ -157,6 +157,7 @@ div.results{
   border-radius: 5px;
   box-shadow: 0px 0px 15px 0px #1f1645;
   transition: 1s;
+  cursor:pointer;
 }
 
 #show-results-btn:hover{
